crates/mega-evm/tests/satin/snapshots/satin__strategic_stop__child_out_of_gas_under_a_cap_does_not_latch.snap
---
source: crates/mega-evm/tests/satin/strategic_stop.rs
expression: "&OutcomeView::new(&result)"
---
{
  "result": {
    "kind": "success",
    "reason": "Stop",
    "output": "0x",
    "created": null,
    "logs": []
  },
  "gas": {
    "regular": 44724,
    "state": 97920,
    "history": 30800,
    "history_bytes": 350,
    "reservoir_remaining": 0,
    "floor": 15000,
    "gas_used": 173444
  },
  "result_gas": {
    "total_gas_spent": 173444,
    "state_gas_spent": 97920,
    "refunded": 0,
    "floor_gas": 15000,
    "reservoir_remaining": 0
  },
  "usage": {
    "data_size": 350,
    "write_records": 1
  },
  "limit_stop": null,
  "oracle_reads": [],
  "accounts": {
    "0x0000000000000000000000000000000000000000": {
      "balance": "0x0",
      "nonce": 0,
      "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
      "created": false,
      "selfdestructed": false,
      "storage": []
    },
    "0x00000000000000000000000000000000000000a0": {
      "balance": "0x0",
      "nonce": 0,
      "code_hash": "0x038af6923c48edc13bd9a7c19f0a3888528b79c9ee6503232fed1ec39958e7eb",
      "created": false,
      "selfdestructed": false,
      "storage": [
        {
          "slot": "0x9",
          "original": "0x0",
          "present": "0x1"
        }
      ]
    },
    "0x0000000000000000000000000000000000200000": {
      "balance": "0x0",
      "nonce": 1,
      "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
      "created": false,
      "selfdestructed": false,
      "storage": []
    },
    "0x4200000000000000000000000000000000000019": {
      "balance": "0x0",
      "nonce": 0,
      "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
      "created": false,
      "selfdestructed": false,
      "storage": []
    },
    "0x420000000000000000000000000000000000001a": {
      "balance": "0x0",
      "nonce": 0,
      "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
      "created": false,
      "selfdestructed": false,
      "storage": []
    },
    "0x420000000000000000000000000000000000001b": {
      "balance": "0x0",
      "nonce": 0,
      "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
      "created": false,
      "selfdestructed": false,
      "storage": []
    }
  }
}
