crates/mega-evm/tests/satin/snapshots/satin__strategic_stop__create_transaction_stopped_before_its_first_frame_bumps_the_nonce.snap
---
source: crates/mega-evm/tests/satin/strategic_stop.rs
expression: "&BTreeMap::from([(\"below the execution cap\", OutcomeView::new(&below)),\n(\"with a reservoir\", OutcomeView::new(&result)),])"
---
{
  "below the execution cap": {
    "result": {
      "kind": "revert",
      "reason": "MegaLimitExceeded(DataSize, 349)",
      "output": "0x84b902670000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000015d",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 25002,
      "state": 0,
      "history": 45056,
      "history_bytes": 512,
      "reservoir_remaining": 0,
      "floor": 36928,
      "gas_used": 70058
    },
    "result_gas": {
      "total_gas_spent": 70058,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 36928,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 512,
      "write_records": 0
    },
    "limit_stop": {
      "kind": "DataSize",
      "limit": 349,
      "used": 512
    },
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000000000": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000200000": {
        "balance": "0x0",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x4200000000000000000000000000000000000019": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x420000000000000000000000000000000000001a": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x420000000000000000000000000000000000001b": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      }
    }
  },
  "with a reservoir": {
    "result": {
      "kind": "revert",
      "reason": "MegaLimitExceeded(DataSize, 349)",
      "output": "0x84b902670000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000015d",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 25002,
      "state": 0,
      "history": 45056,
      "history_bytes": 512,
      "reservoir_remaining": 799954944,
      "floor": 36928,
      "gas_used": 70058
    },
    "result_gas": {
      "total_gas_spent": 70058,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 36928,
      "reservoir_remaining": 799954944
    },
    "usage": {
      "data_size": 512,
      "write_records": 0
    },
    "limit_stop": {
      "kind": "DataSize",
      "limit": 349,
      "used": 512
    },
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000000000": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000200000": {
        "balance": "0x0",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x4200000000000000000000000000000000000019": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x420000000000000000000000000000000000001a": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x420000000000000000000000000000000000001b": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      }
    }
  }
}
