crates/mega-evm/tests/satin/snapshots/satin__strategic_stop__frame_budget_reverts_the_frame_without_a_latch.snap
---
source: crates/mega-evm/tests/satin/strategic_stop.rs
expression: "&OutcomeView::new(&result)"
---
{
  "result": {
    "kind": "success",
    "reason": "Stop",
    "output": "0x",
    "created": null,
    "logs": []
  },
  "gas": {
    "regular": 106041,
    "state": 97920,
    "history": 30800,
    "history_bytes": 350,
    "reservoir_remaining": 0,
    "floor": 15000,
    "gas_used": 234761
  },
  "result_gas": {
    "total_gas_spent": 234761,
    "state_gas_spent": 97920,
    "refunded": 0,
    "floor_gas": 15000,
    "reservoir_remaining": 0
  },
  "usage": {
    "data_size": 350,
    "write_records": 1
  },
  "limit_stop": null,
  "oracle_reads": [],
  "accounts": {
    "0x0000000000000000000000000000000000000000": "unchanged",
    "0x00000000000000000000000000000000000000a0": {
      "balance": "0x0",
      "nonce": 0,
      "code_hash": "0x553d47f2e11bc2e0443468c35d395df42b982e72614e065abcc12620bede112a",
      "created": false,
      "selfdestructed": false,
      "storage": [
        {
          "slot": "0x9",
          "original": "0x0",
          "present": "0x1"
        }
      ]
    },
    "0x0000000000000000000000000000000000200000": {
      "balance": "0x0",
      "nonce": 1,
      "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
      "created": false,
      "selfdestructed": false,
      "storage": []
    },
    "0x4200000000000000000000000000000000000019": "unchanged",
    "0x420000000000000000000000000000000000001a": "unchanged",
    "0x420000000000000000000000000000000000001b": "unchanged"
  }
}
